--- a/SourceCode/Domain/Domain.csproj
+++ b/SourceCode/Domain/Domain.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Domain\AssetRegisterSearch.cs" />
     <Compile Include="Domain\Assetremove.cs" />
     <Compile Include="Domain\Assetremovedetail.cs" />
+    <Compile Include="Domain\Assetrunplan.cs" />
     <Compile Include="Domain\AssetRunTimeReport.cs" />
     <Compile Include="Domain\Assetscrapped.cs" />
     <Compile Include="Domain\Assetsetupdetail.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="SearchObject\AssetmoveSearch.cs" />
     <Compile Include="SearchObject\AssetremovedetailSearch.cs" />
     <Compile Include="SearchObject\AssetremoveSearch.cs" />
+    <Compile Include="SearchObject\AssetrunplanSearch.cs" />
     <Compile Include="SearchObject\AssetscrappedSearch.cs" />
     <Compile Include="SearchObject\AssetSearch.cs" />
     <Compile Include="SearchObject\AssetsetupdetailSearch.cs" />
