--- a/SourceCode/Service/Service.csproj
+++ b/SourceCode/Service/Service.csproj
@@ -100,6 +100,7 @@
     <Compile Include="AssetmoveService.cs" />
     <Compile Include="AssetremovedetailService.cs" />
     <Compile Include="AssetremoveService.cs" />
+    <Compile Include="AssetrunplanService.cs" />
     <Compile Include="AssetscrappedService.cs" />
     <Compile Include="AssetService.cs" />
     <Compile Include="AssetsetupdetailService.cs" />
