--- a/trunk/SourceCode/FixedAsset/FixedAsset.csproj
+++ b/trunk/SourceCode/FixedAsset/FixedAsset.csproj
@@ -1430,7 +1430,9 @@
     <Content Include="Styles\tag.css" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
